fix header spacing

--- a/_assets/css/custom/_header.css.scss
+++ b/_assets/css/custom/_header.css.scss
@@ -12,16 +12,16 @@ $masthead-height: 56px;
   h1,
   h4 {
     width: 248px;
-    font-size: 24px;
+    font-size: 28px;
     height: $masthead-height;
     float: left;
-    line-height: 17px;
+    line-height: 26px;
     font-family: $sans-serif-2;
     text-rendering: optimizeLegibility;
     letter-spacing: -1px;
     a {
       color: $dark-blue;
-      padding-bottom: 7px;
+      padding-bottom: 6px;
       &:hover {
         color: $blue;
         border-bottom: 6px solid $yellow;
